@@ -14,7 +14,10 @@ import org.poo.main.decks.Decks;
 
 import java.util.ArrayList;
 
-public class Game {
+/**
+ * Represents a game.
+ */
+public final class Game {
 
     private int shuffleSeed;
     private int startingIdx;
@@ -27,32 +30,33 @@ public class Game {
         this.turn = 0;
         this.round = 1;
     }
+
     /**
-     * This method draws a card from the deck and adds it to the player's hand.
+     * Draws a card for the player.
      *
-     * @param player the player who will draw the card
-     * @param deck the deck from which the card will be drawn
+     * @param player the player
+     * @param deck the deck
      * @return the updated hand of the player
      */
     public ArrayList<Card> drawCard(final Player player, final ArrayList<Card> deck) {
-        if (deck.size() > 0) {
-            player.getHand().add(deck.get(0));
-            deck.remove(0);
+        if (!deck.isEmpty()) {
+            player.getHand().add(deck.getFirst());
+            deck.removeFirst();
         }
         return player.getHand();
     }
 
     /**
-     * This method creates decks for a player based on the provided deck input.
+     * Creates decks for a player.
      *
-     * @param decksInput the input containing the deck information
-     * @return the created decks for the player
+     * @param decksInput the decks input
+     * @return the created decks
      */
     public Decks createDecksForPlayer(final DecksInput decksInput) {
         ArrayList<ArrayList<CardInput>> decks = decksInput.getDecks();
         ArrayList<ArrayList<Card>> playerDecks = new ArrayList<>();
         Decks deckList = null;
-        ArrayList<CardInput> deckInput = new ArrayList<>();
+        ArrayList<CardInput> deckInput;
 
         for (int i = 0; i < decksInput.getNrDecks(); i++) {
             deckInput = decks.get(i);
@@ -70,13 +74,13 @@ public class Game {
     }
 
     /**
-     * This method ends the current player's turn and prepares the game state for the next turn.
+     * Ends the turn for the current player.
      *
-     * @param playerOneDeck the deck of the first player
-     * @param playerTwoDeck the deck of the second player
+     * @param playerOneDeck the deck of player one
+     * @param playerTwoDeck the deck of player two
      * @param playerOne the first player
      * @param playerTwo the second player
-     * @param game the current game instance
+     * @param game the game instance
      */
     public void endTurn(final ArrayList<Card> playerOneDeck, final ArrayList<Card> playerTwoDeck,
                         final Player playerOne, final Player playerTwo, final Game game) {
@@ -110,10 +114,10 @@ public class Game {
     }
 
     /**
-     * This method unblocks the cards in the player's deck by resetting their status.
+     * Unblocks the cards for the player.
      *
-     * @param player the player whose cards will be unblocked
-     * @param deck the deck of cards to be unblocked
+     * @param player the player
+     * @param deck the deck
      */
     public void unblockCards(final Player player, final ArrayList<Card> deck) {
         for (Card card : deck) {
@@ -132,13 +136,13 @@ public class Game {
     }
 
     /**
-     * This method sets up the game by drawing initial cards for
-     * both players and setting the initial mana.
+     * Sets up the game.
+     *
      * @param playerOne the first player
      * @param playerTwo the second player
-     * @param game the current game instance
-     * @param playerOneDeck the deck of the first player
-     * @param playerTwoDeck the deck of the second player
+     * @param game the game instance
+     * @param playerOneDeck the deck of player one
+     * @param playerTwoDeck the deck of player two
      */
     public void setTheGame(final Player playerOne, final Player playerTwo, final Game game,
                            final ArrayList<Card> playerOneDeck,
@@ -156,19 +160,18 @@ public class Game {
     }
 
     /**
-     * This method runs the game by processing the actions
-     * input and updating the game state accordingly.
+     * Runs the game.
      *
      * @param playerOne the first player
      * @param playerTwo the second player
-     * @param actionsInput the list of actions to be processed
-     * @param game the current game instance
-     * @param wins the list containing the number of wins for each player
-     * @param output the JSON output node to store the results
+     * @param actionsInput the actions input
+     * @param game the game instance
+     * @param wins the wins
+     * @param output the output
      */
     public void run(final Player playerOne, final Player playerTwo,
                     final ArrayList<ActionsInput> actionsInput, final Game game,
-                    final ArrayList<Integer> wins, final ArrayNode output) {
+                    final WinsManager winsManager, final ArrayNode output) {
         ArrayList<Card> playerOneDeck = playerOne.getPlayerDeck(playerOne.getPlayerDeckIdx(),
                 playerOne, game);
         ArrayList<Card> playerTwoDeck = playerTwo.getPlayerDeck(playerTwo.getPlayerDeckIdx(),
@@ -178,152 +181,106 @@ public class Game {
         ActionDecider actionDecider = new ActionDecider();
 
         for (ActionsInput action : actionsInput) {
-            if (action.getCommand().equals("getPlayerDeck")) {
-                actionDecider.getDeckIf(action.getPlayerIdx(), output, toJson, playerOneDeck,
-                        playerTwoDeck);
-            } else if (action.getCommand().equals("getPlayerHero")) {
-                actionDecider.getPlayerHeroIf(action.getPlayerIdx(), output, toJson,
-                        playerOne.getPlayerHero(), playerTwo.getPlayerHero());
-            } else if (action.getCommand().equals("getPlayerTurn")) {
-                toJson.getPlayerTurn(action, game.getTurn(), output);
-            } else if (action.getCommand().equals("endPlayerTurn")) {
-                endTurn(playerOneDeck, playerTwoDeck, playerOne, playerTwo, game);
-            } else if (action.getCommand().equals("placeCard")) {
-                actionDecider.placeCardIf(action, game, playerOne, playerTwo,
-                        action.getPlayerIdx(), output, toJson);
-            } else if (action.getCommand().equals("getCardsInHand")) {
-                actionDecider.getCardsInHandIf(action.getPlayerIdx(), output, toJson,
-                        playerOne, playerTwo);
-            } else if (action.getCommand().equals("getPlayerMana")) {
-                actionDecider.getPlayerManaIf(action.getPlayerIdx(), playerOne.getMana(),
-                        playerTwo.getMana(), output, toJson);
-            } else if (action.getCommand().equals("getCardsOnTable")) {
-                toJson.getCardsOnTable(playerOne.getFrontRow(), playerOne.getBackRow(),
-                        playerTwo.getFrontRow(), playerTwo.getBackRow(), output);
-            } else if (action.getCommand().equals("cardUsesAttack")) {
-                actionDecider.cardUsesAttackIf(action, game, playerOne, playerTwo, output, toJson);
-            } else if (action.getCommand().equals("getCardAtPosition")) {
-                actionDecider.getCardAtPositionIf(action, game, playerOne, playerTwo,
-                        output, toJson);
-            } else if (action.getCommand().equals("cardUsesAbility")) {
-                actionDecider.cardUsesAbility(output, toJson, playerOne, playerTwo, action, game);
-            } else if (action.getCommand().equals("useAttackHero")) {
-                actionDecider.useAttackHero(playerOne, playerTwo, game, output,
-                        toJson, wins, action);
-            } else if (action.getCommand().equals("useHeroAbility")) {
-                actionDecider.useHeroAbility(playerOne, playerTwo, game, output, toJson, action);
-            } else if (action.getCommand().equals("getFrozenCardsOnTable")) {
-                toJson.getFrozenCardsOnTable(playerOne.getFrontRow(), playerOne.getBackRow(),
-                        playerTwo.getFrontRow(), playerTwo.getBackRow(), output);
-            } else if (action.getCommand().equals("getPlayerOneWins")) {
-                toJson.getPlayerOneWins(wins.get(0), output);
-            } else if (action.getCommand().equals("getPlayerTwoWins")) {
-                toJson.getPlayerTwoWins(wins.get(1), output);
-            } else if (action.getCommand().equals("getTotalGamesPlayed")) {
-                toJson.getTotalGamesPlayed(wins.get(0) + wins.get(1), output);
+            Command command = Command.fromString(action.getCommand());
+
+            switch (command) {
+                case GET_PLAYER_DECK:
+                    actionDecider.getDeckIf(action.getPlayerIdx(), output, toJson,
+                            playerOneDeck, playerTwoDeck);
+                    break;
+                case GET_PLAYER_HERO:
+                    actionDecider.getPlayerHeroIf(action.getPlayerIdx(), output,
+                            toJson, playerOne.getPlayerHero(), playerTwo.getPlayerHero());
+                    break;
+                case GET_PLAYER_TURN:
+                    toJson.getPlayerTurn(action, game.getTurn(), output);
+                    break;
+                case END_PLAYER_TURN:
+                    endTurn(playerOneDeck, playerTwoDeck, playerOne, playerTwo, game);
+                    break;
+                case PLACE_CARD:
+                    actionDecider.placeCardIf(action, game, playerOne, playerTwo,
+                            action.getPlayerIdx(), output, toJson);
+                    break;
+                case GET_CARDS_IN_HAND:
+                    actionDecider.getCardsInHandIf(action.getPlayerIdx(), output,
+                            toJson, playerOne, playerTwo);
+                    break;
+                case GET_PLAYER_MANA:
+                    actionDecider.getPlayerManaIf(action.getPlayerIdx(), playerOne.getMana(),
+                            playerTwo.getMana(), output, toJson);
+                    break;
+                case GET_CARDS_ON_TABLE:
+                    toJson.getCardsOnTable(playerOne.getFrontRow(), playerOne.getBackRow(),
+                            playerTwo.getFrontRow(), playerTwo.getBackRow(), output);
+                    break;
+                case CARD_USES_ATTACK:
+                    actionDecider.cardUsesAttackIf(action, game, playerOne, playerTwo,
+                            output, toJson);
+                    break;
+                case GET_CARD_AT_POSITION:
+                    actionDecider.getCardAtPositionIf(action, game, playerOne, playerTwo,
+                            output, toJson);
+                    break;
+                case CARD_USES_ABILITY:
+                    actionDecider.cardUsesAbility(output, toJson, playerOne, playerTwo,
+                            action, game);
+                    break;
+                case USE_ATTACK_HERO:
+                    actionDecider.useAttackHero(playerOne, playerTwo, game, output, toJson,
+                            winsManager, action);
+                    break;
+                case USE_HERO_ABILITY:
+                    actionDecider.useHeroAbility(playerOne, playerTwo, game, output, toJson,
+                            action);
+                    break;
+                case GET_FROZEN_CARDS_ON_TABLE:
+                    toJson.getFrozenCardsOnTable(playerOne.getFrontRow(), playerOne.getBackRow(),
+                            playerTwo.getFrontRow(), playerTwo.getBackRow(), output);
+                    break;
+                case GET_PLAYER_ONE_WINS:
+                    toJson.getPlayerOneWins(winsManager.getWins().get(0), output);
+                    break;
+                case GET_PLAYER_TWO_WINS:
+                    toJson.getPlayerTwoWins(winsManager.getWins().get(1), output);
+                    break;
+                case GET_TOTAL_GAMES_PLAYED:
+                    toJson.getTotalGamesPlayed(winsManager.getWins().get(0) + winsManager.getWins().get(1), output);
+                    break;
+                default:
+                    throw new IllegalArgumentException("Unknown command: " + command);
             }
         }
     }
 
-    /**
-     * This method returns the row of cards for a given player and row index.
-     *
-     * @param playerOne the first player
-     * @param playerTwo the second player
-     * @param x the row index
-     * @return the row of cards
-     */
-    public ArrayList<Card> getRow(final Player playerOne, final Player playerTwo, final int x) {
-        if (x == 0) {
-            return playerTwo.getBackRow();
-        } else if (x == 1) {
-            return playerTwo.getFrontRow();
-        } else if (x == 2) {
-            return playerOne.getFrontRow();
-        } else {
-            return playerOne.getBackRow();
-        }
-    }
-
-    /**
-     * This method attacks a card with another card.
-     * @param cardAttacked
-     * @param cardAttacker
-     * @param row
-     */
-
-    public void attackCard(final Card cardAttacked, final Card cardAttacker,
-                           final ArrayList<Card> row) {
-        Minion minionAttacker = (Minion) cardAttacker;
-        if (cardAttacker != null && cardAttacked != null) {
-
-            if (minionAttacker != null) {
-                cardAttacked.setHealth(cardAttacked.getHealth() - minionAttacker.getAttackDamage());
-            }
-            if (cardAttacked.getHealth() <= 0) {
-                row.remove(cardAttacked);
-            }
-
-
-            cardAttacker.setHasAttacked(1);
-        }
-    }
-
-    /**
-     * This method returns the seed used for shuffling the decks.
-     * @return
-     */
     public int getShuffleSeed() {
         return shuffleSeed;
     }
 
-    /**
-     * This method sets the seed used for shuffling the decks.
-     * @param shuffleSeed
-     */
     public void setShuffleSeed(final int shuffleSeed) {
         this.shuffleSeed = shuffleSeed;
     }
 
-    /**
-     * This method returns the starting player index.
-     * @return
-     */
     public int getStartingIdx() {
         return startingIdx;
     }
-    /**
-     * This method sets the starting player index.
-     * @param startingIdx
-     */
+
     public void setStartingIdx(final int startingIdx) {
         this.startingIdx = startingIdx;
     }
-    /**
-     * This method returns the current turn index.
-     * @return
-     */
+
     public int getTurn() {
         return turn;
     }
-    /**
-     * This method sets the current turn index.
-     * @param turnIdx
-     */
+
     public void setTurn(final int turnIdx) {
         this.turn = turnIdx;
     }
-    /**
-     * This method returns the current round index.
-     * @return
-     */
+
     public int getRound() {
         return round;
     }
-    /**
-     * This method sets the current round index.
-     * @param round
-     */
+
     public void setRound(final int round) {
         this.round = round;
     }
